# svn-archive

./: .gitignore  .mailmap  INSTALL  LICENSE  Makefile  README  README.md  build.xml  gpsdata  gpsdata-1  install_testserver  install_www  staticgpsdata  staticgpsdata-2  svnindex.css  svnindex.xsl
applications/: Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
applications/debian/: Makefile.am  Makefile.in  README  README.Debian  control  emacsen-startup.ex  init.d.ex  manpage.1.ex  menu.ex  openstreetmap-default.ex  openstreetmap.doc-base.EX  postrm.ex  prerm.ex  rules
applications/editors/applet/: .classpath  .project  build.xml  runapplet.sh
applications/editors/josm/: README.md
applications/editors/josm-ng/: EDITING  build.xml
applications/editors/josm./: .directory
applications/editors/merkaartor/: .gitignore  README.md
applications/editors/osm-editor/: 010505_osm.gpx  070505_osm.gpx  different_type_paths.gpx
applications/editors/osmajax/: DrawOSMFeature.js  GeometriedOSMItem.js  OSM.js  OSMFeature.js  OSMItem.js  Way.js  index.html  init.js  routetypes.js
applications/editors/osmpedit/: TODO  curl.pm  landsat.pm  osm.pm  osmnode.pm  osmpcommand  osmpedit  osmsegment.pm  osmutil.pm  test  trackcollection.pm  trackpoint.pm
applications/editors/potlatch/: README.TXT  advice.as  anchorpoint.as  changeset.as  error.as  getgps.cgi  gps.as  help.as  history.as  iconpanel.as  inspector.as  localise.pl  localise2.pl  node.as  offline.as  photos.as  poi.as  potlatch.as  potlatch.cgi  potlatch.pl  potlatch_assets.pl  potlatchtweet.cgi  properties.as  relation.as  rubygetgps.cgi  start.as  tagfinder.as  test.html  tiles.as  ui.as  undo.as  way.as  world.as
applications/editors/potlatch2/: .gitignore  README.md
applications/editors/pyosmeditor/: pyosmeditor.py
applications/etc/: README  elemstyles.xml
applications/lib/Geo-OSM-MapFeatures/: Changes  MANIFEST  Makefile.PL  README
applications/lib/ccoord/: LatLng.cpp  LatLng.h  Makefile  OSRef.h  test.cpp  util.h
applications/lib/libimg/: Img.h  ImgData.cpp  ImgFat.h  ImgHeader.cpp  ImgHeader.h  ImgSubfile.h  ImgTre.h  Makefile  README  img2img.cpp  osm2img.cpp
applications/lib/libosm/: Client.cpp  Client.h  Components.cpp  Components.h  FeatureClassification.cpp  FeatureClassification.h  FeaturesParser.cpp  FeaturesParser.h  Makefile  Node.cpp  Node.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Segment.h  Way.cpp  Way.h  data1.osm  functions.h  llgr.cpp  llgr.h  osmshp.cpp  osmshp.h  rulestest.cpp  test.cpp  test.osm  test1.cpp  test2.cpp  test3.cpp
applications/mobile/FreemapMobile/: project.properties
applications/mobile/healthwhere/: README  VERSION.php  about.php  detail.php  edit.php  edit_addr.php  edit_hours.php  geolocation.php  importer.php  inc_config.php  inc_config_dist.php  inc_edit.php  inc_foot.php  inc_head.php  inc_head_html.php  inc_openclosed.php  index.php  mobile.css  results.php  results_gpx.php  results_html.php
applications/mobile/rana/: getrana.sh  gui.py  package.bat  rana.py
applications/mobile/rana2/: rana2.py
applications/nsis/: README.txt  bookmarks  openstreetmap-setup.sh  openstreetmap.nsi
applications/rendering/: render.py
applications/rendering/OSMLabelOptimizer/: .classpath  .project  INSTALL  TODO  build.xml
applications/rendering/clopin/: clopin-z12.xml  clopin-z13.xml  clopin-z14.xml  clopin-z15.xml  clopin-z16.xml  clopin-z17.xml  layers_clopin.conf  readme.txt
applications/rendering/fmapgen/: Makefile  README  fmapgen.cpp
applications/rendering/forWikipedia/: README  wikipediaMaps.pl
applications/rendering/genericHeatmapRender/: KMLGenerator.py  binnedNodeHeatmap_Demo.py  heatmapPNGgenerator.py  heatmappr.py  heatmappr_GridDemo.py  heatmappr_TAHheatmap.py  location.py  locationFinder.py  locationFinder_TAHregularGrid.py  locationFinder_flickr_locations.py  locationFinder_regularGrid.py  readme.txt
applications/rendering/gosmore/: .gitignore  AndroidManifest.xml  Makefile  Makefile.in  README  appendOSBtoOSM.sh  bboxSplit.cpp  bounds.osm.bz2  ceglue.c  ceglue.h  configure  configure.in  countries.osm  dailyUpdate.sh  density.c  density.txt  density.xbm  density6.cpp  elemstyles.xml  extract.c  geonames2osm.c  gosmore.1  gosmore.cc  gosmore.cpp  gosmore.desktop  gosmore.nsi  gosmore.rc  gosmore.vcb  gosmore.vco  gosmore.vcp  gosmore.xpm  icons.csv  icons.xpm  libgosm.cpp  libgosm.h  lowres.osm.bz2  mkicons.sh  mkworld.sh  osmunda.cpp  proguard.cfg  (+4 more)
applications/rendering/gpx_slippy_map/: gpx.php  index.php  list.php  projection.php  route.php  test.php  tile.php  view.php
applications/rendering/history/: README  hqrun.pl  import.pl  index.cgi
applications/rendering/imgAtlas/: README  config-cyprus.txt  config-istanbul.txt  config-izmir.txt  imgAtlas.pl
applications/rendering/kah/: kah.py  tilesetToFile.py
applications/rendering/makeMapOnMove/: interface.txt  log.nmea  mm.pl  start.htm  template.htm
applications/rendering/mapnik-german/: README  README.i10n  default.style  osm-de.xml
applications/rendering/mapyrus/: README
applications/rendering/mtb/: mtb.xml  new  2.txt  test.sh
applications/rendering/nor-hikingmap/: entities.xml.ent  hiking.osm2pgsql.style  hikingmap.xml  importadditions.osm2pgsql.style  layer-areanames.xml.ent  layer-buildings.xml.ent  layer-landscape.xml.ent  layer-linefeatures.xml.ent  layer-nationalpark.xml.ent  layer-powerlines.xml.ent  (+9 more)
applications/share/: Makefile  Makefile.am  Makefile.in
applications/utils/: Makefile  Makefile.am  Makefile.in  README
c/sirf_driver/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.rules  NEWS  README  autogen.sh  configure.ac
map-icons/: Makefile.am  Makefile.in  README  create_makefile.sh  icons.xml  index.html  overview.de.html  overview.html
osm-editor/jeeps-0.1.4-nick/: AUTHORS  ChangeLog  JEEPS_0_1_4_README  Makefile  Makefile.am  Makefile.in  NEWS  PROBLEMS  README  README-NMEA  THANKS  TODO  config.cache  config.status  configure  configure.in  gpsapp.c  gpsmem.c  gpsnmea.c  gpsnmea.h  gpsnmeafmt.c  gpsread.c  gpssend.c  libtool
(+7047 files in other folders)
