

square.big__DATA = square.big//*.png
square.big_dir = $(datadir)/square.big/

square.big_sightseeing_DATA = square.big/sightseeing/*.png
square.big_sightseeingdir = $(datadir)/square.big/sightseeing

square.big_waypoint_DATA = square.big/waypoint/*.png
square.big_waypointdir = $(datadir)/square.big/waypoint

square.big_accommodation_DATA = square.big/accommodation/*.png
square.big_accommodationdir = $(datadir)/square.big/accommodation

square.big_accommodation_hotel_DATA = square.big/accommodation/hotel/*.png
square.big_accommodation_hoteldir = $(datadir)/square.big/accommodation/hotel

square.big_accommodation_camping_DATA = square.big/accommodation/camping/*.png
square.big_accommodation_campingdir = $(datadir)/square.big/accommodation/camping

square.big_wlan_DATA = square.big/wlan/*.png
square.big_wlandir = $(datadir)/square.big/wlan

square.big_wlan_pay_DATA = square.big/wlan/pay/*.png
square.big_wlan_paydir = $(datadir)/square.big/wlan/pay

square.big_geocache_DATA = square.big/geocache/*.png
square.big_geocachedir = $(datadir)/square.big/geocache

square.big_health_DATA = square.big/health/*.png
square.big_healthdir = $(datadir)/square.big/health

square.big_money_DATA = square.big/money/*.png
square.big_moneydir = $(datadir)/square.big/money

square.big_money_atm_DATA = square.big/money/atm/*.png
square.big_money_atmdir = $(datadir)/square.big/money/atm

square.big_money_bank_DATA = square.big/money/bank/*.png
square.big_money_bankdir = $(datadir)/square.big/money/bank

square.big_nautical_DATA = square.big/nautical/*.png
square.big_nauticaldir = $(datadir)/square.big/nautical

square.big_food_DATA = square.big/food/*.png
square.big_fooddir = $(datadir)/square.big/food

square.big_food_restaurant_DATA = square.big/food/restaurant/*.png
square.big_food_restaurantdir = $(datadir)/square.big/food/restaurant

square.big_food_fastfood_DATA = square.big/food/fastfood/*.png
square.big_food_fastfooddir = $(datadir)/square.big/food/fastfood

square.big_food_machine_DATA = square.big/food/machine/*.png
square.big_food_machinedir = $(datadir)/square.big/food/machine

square.big_recreation_DATA = square.big/recreation/*.png
square.big_recreationdir = $(datadir)/square.big/recreation

square.big_sports_DATA = square.big/sports/*.png
square.big_sportsdir = $(datadir)/square.big/sports

square.big_misc_DATA = square.big/misc/*.png
square.big_miscdir = $(datadir)/square.big/misc

square.big_places_DATA = square.big/places/*.png
square.big_placesdir = $(datadir)/square.big/places

square.big_places_settlement_DATA = square.big/places/settlement/*.png
square.big_places_settlementdir = $(datadir)/square.big/places/settlement

square.big_vehicle_DATA = square.big/vehicle/*.png
square.big_vehicledir = $(datadir)/square.big/vehicle

square.big_vehicle_car_rental_DATA = square.big/vehicle/car_rental/*.png
square.big_vehicle_car_rentaldir = $(datadir)/square.big/vehicle/car_rental

square.big_vehicle_parking_DATA = square.big/vehicle/parking/*.png
square.big_vehicle_parkingdir = $(datadir)/square.big/vehicle/parking

square.big_vehicle_fuel_station_DATA = square.big/vehicle/fuel_station/*.png
square.big_vehicle_fuel_stationdir = $(datadir)/square.big/vehicle/fuel_station

square.big_education_DATA = square.big/education/*.png
square.big_educationdir = $(datadir)/square.big/education

square.big_education_school_DATA = square.big/education/school/*.png
square.big_education_schooldir = $(datadir)/square.big/education/school

square.big_shopping_DATA = square.big/shopping/*.png
square.big_shoppingdir = $(datadir)/square.big/shopping

square.big_shopping_furniture_DATA = square.big/shopping/furniture/*.png
square.big_shopping_furnituredir = $(datadir)/square.big/shopping/furniture

square.big_shopping_groceries_DATA = square.big/shopping/groceries/*.png
square.big_shopping_groceriesdir = $(datadir)/square.big/shopping/groceries

square.big_shopping_sports_DATA = square.big/shopping/sports/*.png
square.big_shopping_sportsdir = $(datadir)/square.big/shopping/sports

square.big_shopping_vehicle_DATA = square.big/shopping/vehicle/*.png
square.big_shopping_vehicledir = $(datadir)/square.big/shopping/vehicle

square.big_shopping_machine_DATA = square.big/shopping/machine/*.png
square.big_shopping_machinedir = $(datadir)/square.big/shopping/machine

square.big_shopping_supermarket_DATA = square.big/shopping/supermarket/*.png
square.big_shopping_supermarketdir = $(datadir)/square.big/shopping/supermarket

square.big_shopping_media_DATA = square.big/shopping/media/*.png
square.big_shopping_mediadir = $(datadir)/square.big/shopping/media

square.big_shopping_diy_store_DATA = square.big/shopping/diy_store/*.png
square.big_shopping_diy_storedir = $(datadir)/square.big/shopping/diy_store

square.big_shopping_rental_DATA = square.big/shopping/rental/*.png
square.big_shopping_rentaldir = $(datadir)/square.big/shopping/rental

square.big_shopping_games_DATA = square.big/shopping/games/*.png
square.big_shopping_gamesdir = $(datadir)/square.big/shopping/games

square.big_public_DATA = square.big/public/*.png
square.big_publicdir = $(datadir)/square.big/public

square.big_public_inspecting_authority_DATA = square.big/public/inspecting-authority/*.png
square.big_public_inspecting_authoritydir = $(datadir)/square.big/public/inspecting-authority

square.big_public_recycling_DATA = square.big/public/recycling/*.png
square.big_public_recyclingdir = $(datadir)/square.big/public/recycling

square.big_public_recycling_container_DATA = square.big/public/recycling/container/*.png
square.big_public_recycling_containerdir = $(datadir)/square.big/public/recycling/container

square.big_public_administration_DATA = square.big/public/administration/*.png
square.big_public_administrationdir = $(datadir)/square.big/public/administration

square.big_people_DATA = square.big/people/*.png
square.big_peopledir = $(datadir)/square.big/people

square.big_people_developer_DATA = square.big/people/developer/*.png
square.big_people_developerdir = $(datadir)/square.big/people/developer

square.big_religion_DATA = square.big/religion/*.png
square.big_religiondir = $(datadir)/square.big/religion

square.big_religion_church_DATA = square.big/religion/church/*.png
square.big_religion_churchdir = $(datadir)/square.big/religion/church

square.big_transport_DATA = square.big/transport/*.png
square.big_transportdir = $(datadir)/square.big/transport


square.small__DATA = square.small//*.png
square.small_dir = $(datadir)/square.small/

square.small_sightseeing_DATA = square.small/sightseeing/*.png
square.small_sightseeingdir = $(datadir)/square.small/sightseeing

square.small_waypoint_DATA = square.small/waypoint/*.png
square.small_waypointdir = $(datadir)/square.small/waypoint

square.small_accommodation_DATA = square.small/accommodation/*.png
square.small_accommodationdir = $(datadir)/square.small/accommodation

square.small_wlan_DATA = square.small/wlan/*.png
square.small_wlandir = $(datadir)/square.small/wlan

square.small_geocache_DATA = square.small/geocache/*.png
square.small_geocachedir = $(datadir)/square.small/geocache

square.small_health_DATA = square.small/health/*.png
square.small_healthdir = $(datadir)/square.small/health

square.small_money_DATA = square.small/money/*.png
square.small_moneydir = $(datadir)/square.small/money

square.small_nautical_DATA = square.small/nautical/*.png
square.small_nauticaldir = $(datadir)/square.small/nautical

square.small_food_DATA = square.small/food/*.png
square.small_fooddir = $(datadir)/square.small/food

square.small_recreation_DATA = square.small/recreation/*.png
square.small_recreationdir = $(datadir)/square.small/recreation

square.small_sports_DATA = square.small/sports/*.png
square.small_sportsdir = $(datadir)/square.small/sports

square.small_misc_DATA = square.small/misc/*.png
square.small_miscdir = $(datadir)/square.small/misc

square.small_places_DATA = square.small/places/*.png
square.small_placesdir = $(datadir)/square.small/places

square.small_places_settlement_DATA = square.small/places/settlement/*.png
square.small_places_settlementdir = $(datadir)/square.small/places/settlement

square.small_vehicle_DATA = square.small/vehicle/*.png
square.small_vehicledir = $(datadir)/square.small/vehicle

square.small_vehicle_fuel_station_DATA = square.small/vehicle/fuel_station/*.png
square.small_vehicle_fuel_stationdir = $(datadir)/square.small/vehicle/fuel_station

square.small_education_DATA = square.small/education/*.png
square.small_educationdir = $(datadir)/square.small/education

square.small_shopping_DATA = square.small/shopping/*.png
square.small_shoppingdir = $(datadir)/square.small/shopping

square.small_shopping_supermarket_DATA = square.small/shopping/supermarket/*.png
square.small_shopping_supermarketdir = $(datadir)/square.small/shopping/supermarket

square.small_public_DATA = square.small/public/*.png
square.small_publicdir = $(datadir)/square.small/public

square.small_people_DATA = square.small/people/*.png
square.small_peopledir = $(datadir)/square.small/people

square.small_people_developer_DATA = square.small/people/developer/*.png
square.small_people_developerdir = $(datadir)/square.small/people/developer

square.small_religion_DATA = square.small/religion/*.png
square.small_religiondir = $(datadir)/square.small/religion

square.small_transport_DATA = square.small/transport/*.png
square.small_transportdir = $(datadir)/square.small/transport


classic__DATA = classic//*.png
classic_dir = $(datadir)/classic/

classic_sightseeing_DATA = classic/sightseeing/*.png
classic_sightseeingdir = $(datadir)/classic/sightseeing

classic_waypoint_DATA = classic/waypoint/*.png
classic_waypointdir = $(datadir)/classic/waypoint

classic_accommodation_DATA = classic/accommodation/*.png
classic_accommodationdir = $(datadir)/classic/accommodation

classic_accommodation_camping_DATA = classic/accommodation/camping/*.png
classic_accommodation_campingdir = $(datadir)/classic/accommodation/camping

classic_wlan_DATA = classic/wlan/*.png
classic_wlandir = $(datadir)/classic/wlan

classic_geocache_DATA = classic/geocache/*.png
classic_geocachedir = $(datadir)/classic/geocache

classic_health_DATA = classic/health/*.png
classic_healthdir = $(datadir)/classic/health

classic_money_DATA = classic/money/*.png
classic_moneydir = $(datadir)/classic/money

classic_money_bank_DATA = classic/money/bank/*.png
classic_money_bankdir = $(datadir)/classic/money/bank

classic_nautical_DATA = classic/nautical/*.png
classic_nauticaldir = $(datadir)/classic/nautical

classic_food_DATA = classic/food/*.png
classic_fooddir = $(datadir)/classic/food

classic_food_restaurant_DATA = classic/food/restaurant/*.png
classic_food_restaurantdir = $(datadir)/classic/food/restaurant

classic_food_fastfood_DATA = classic/food/fastfood/*.png
classic_food_fastfooddir = $(datadir)/classic/food/fastfood

classic_food_snacks_DATA = classic/food/snacks/*.png
classic_food_snacksdir = $(datadir)/classic/food/snacks

classic_recreation_DATA = classic/recreation/*.png
classic_recreationdir = $(datadir)/classic/recreation

classic_sports_DATA = classic/sports/*.png
classic_sportsdir = $(datadir)/classic/sports

classic_misc_DATA = classic/misc/*.png
classic_miscdir = $(datadir)/classic/misc

classic_misc_information_DATA = classic/misc/information/*.png
classic_misc_informationdir = $(datadir)/classic/misc/information

classic_places_DATA = classic/places/*.png
classic_placesdir = $(datadir)/classic/places

classic_places_settlement_DATA = classic/places/settlement/*.png
classic_places_settlementdir = $(datadir)/classic/places/settlement

classic_vehicle_DATA = classic/vehicle/*.png
classic_vehicledir = $(datadir)/classic/vehicle

classic_vehicle_car_rental_DATA = classic/vehicle/car_rental/*.png
classic_vehicle_car_rentaldir = $(datadir)/classic/vehicle/car_rental

classic_vehicle_parking_DATA = classic/vehicle/parking/*.png
classic_vehicle_parkingdir = $(datadir)/classic/vehicle/parking

classic_vehicle_fuel_station_DATA = classic/vehicle/fuel_station/*.png
classic_vehicle_fuel_stationdir = $(datadir)/classic/vehicle/fuel_station

classic_education_DATA = classic/education/*.png
classic_educationdir = $(datadir)/classic/education

classic_education_school_DATA = classic/education/school/*.png
classic_education_schooldir = $(datadir)/classic/education/school

classic_shopping_DATA = classic/shopping/*.png
classic_shoppingdir = $(datadir)/classic/shopping

classic_shopping_groceries_DATA = classic/shopping/groceries/*.png
classic_shopping_groceriesdir = $(datadir)/classic/shopping/groceries

classic_shopping_supermarket_DATA = classic/shopping/supermarket/*.png
classic_shopping_supermarketdir = $(datadir)/classic/shopping/supermarket

classic_public_DATA = classic/public/*.png
classic_publicdir = $(datadir)/classic/public

classic_people_DATA = classic/people/*.png
classic_peopledir = $(datadir)/classic/people

classic_religion_DATA = classic/religion/*.png
classic_religiondir = $(datadir)/classic/religion

classic_transport_DATA = classic/transport/*.png
classic_transportdir = $(datadir)/classic/transport

classic_transport_ferry_DATA = classic/transport/ferry/*.png
classic_transport_ferrydir = $(datadir)/classic/transport/ferry

classic_transport_bridge_DATA = classic/transport/bridge/*.png
classic_transport_bridgedir = $(datadir)/classic/transport/bridge


nickw__DATA = nickw//*.png
nickw_dir = $(datadir)/nickw/



EXTRA_DIST= \
	$(square.big__DATA) \
	$(square.big_sightseeing_DATA) \
	$(square.big_waypoint_DATA) \
	$(square.big_accommodation_DATA) \
	$(square.big_accommodation_hotel_DATA) \
	$(square.big_accommodation_camping_DATA) \
	$(square.big_wlan_DATA) \
	$(square.big_wlan_pay_DATA) \
	$(square.big_geocache_DATA) \
	$(square.big_health_DATA) \
	$(square.big_money_DATA) \
	$(square.big_money_atm_DATA) \
	$(square.big_money_bank_DATA) \
	$(square.big_nautical_DATA) \
	$(square.big_food_DATA) \
	$(square.big_food_restaurant_DATA) \
	$(square.big_food_fastfood_DATA) \
	$(square.big_food_machine_DATA) \
	$(square.big_recreation_DATA) \
	$(square.big_sports_DATA) \
	$(square.big_misc_DATA) \
	$(square.big_places_DATA) \
	$(square.big_places_settlement_DATA) \
	$(square.big_vehicle_DATA) \
	$(square.big_vehicle_car_rental_DATA) \
	$(square.big_vehicle_parking_DATA) \
	$(square.big_vehicle_fuel_station_DATA) \
	$(square.big_education_DATA) \
	$(square.big_education_school_DATA) \
	$(square.big_shopping_DATA) \
	$(square.big_shopping_furniture_DATA) \
	$(square.big_shopping_groceries_DATA) \
	$(square.big_shopping_sports_DATA) \
	$(square.big_shopping_vehicle_DATA) \
	$(square.big_shopping_machine_DATA) \
	$(square.big_shopping_supermarket_DATA) \
	$(square.big_shopping_media_DATA) \
	$(square.big_shopping_diy_store_DATA) \
	$(square.big_shopping_rental_DATA) \
	$(square.big_shopping_games_DATA) \
	$(square.big_public_DATA) \
	$(square.big_public_inspecting_authority_DATA) \
	$(square.big_public_recycling_DATA) \
	$(square.big_public_recycling_container_DATA) \
	$(square.big_public_administration_DATA) \
	$(square.big_people_DATA) \
	$(square.big_people_developer_DATA) \
	$(square.big_religion_DATA) \
	$(square.big_religion_church_DATA) \
	$(square.big_transport_DATA) \
	$(square.small__DATA) \
	$(square.small_sightseeing_DATA) \
	$(square.small_waypoint_DATA) \
	$(square.small_accommodation_DATA) \
	$(square.small_wlan_DATA) \
	$(square.small_geocache_DATA) \
	$(square.small_health_DATA) \
	$(square.small_money_DATA) \
	$(square.small_nautical_DATA) \
	$(square.small_food_DATA) \
	$(square.small_recreation_DATA) \
	$(square.small_sports_DATA) \
	$(square.small_misc_DATA) \
	$(square.small_places_DATA) \
	$(square.small_places_settlement_DATA) \
	$(square.small_vehicle_DATA) \
	$(square.small_vehicle_fuel_station_DATA) \
	$(square.small_education_DATA) \
	$(square.small_shopping_DATA) \
	$(square.small_shopping_supermarket_DATA) \
	$(square.small_public_DATA) \
	$(square.small_people_DATA) \
	$(square.small_people_developer_DATA) \
	$(square.small_religion_DATA) \
	$(square.small_transport_DATA) \
	$(classic__DATA) \
	$(classic_sightseeing_DATA) \
	$(classic_waypoint_DATA) \
	$(classic_accommodation_DATA) \
	$(classic_accommodation_camping_DATA) \
	$(classic_wlan_DATA) \
	$(classic_geocache_DATA) \
	$(classic_health_DATA) \
	$(classic_money_DATA) \
	$(classic_money_bank_DATA) \
	$(classic_nautical_DATA) \
	$(classic_food_DATA) \
	$(classic_food_restaurant_DATA) \
	$(classic_food_fastfood_DATA) \
	$(classic_food_snacks_DATA) \
	$(classic_recreation_DATA) \
	$(classic_sports_DATA) \
	$(classic_misc_DATA) \
	$(classic_misc_information_DATA) \
	$(classic_places_DATA) \
	$(classic_places_settlement_DATA) \
	$(classic_vehicle_DATA) \
	$(classic_vehicle_car_rental_DATA) \
	$(classic_vehicle_parking_DATA) \
	$(classic_vehicle_fuel_station_DATA) \
	$(classic_education_DATA) \
	$(classic_education_school_DATA) \
	$(classic_shopping_DATA) \
	$(classic_shopping_groceries_DATA) \
	$(classic_shopping_supermarket_DATA) \
	$(classic_public_DATA) \
	$(classic_people_DATA) \
	$(classic_religion_DATA) \
	$(classic_transport_DATA) \
	$(classic_transport_ferry_DATA) \
	$(classic_transport_bridge_DATA) \
	$(nickw__DATA) \
	create_makefile.sh
