## Makefile.am for JEEPS
## Process this file with automake to produce Makefile.in in all directories.
AUTOMAKE_OPTIONS = gnits

SUBDIRS = lib src

# files with nonstandard names in this directory
#EXTRA_DIST = COMPAT LICENSE KNOWN_BUGS ONEWS PROBLEMS

# tar to pick up the other directories
# then remove any CVS subdirectories

