# Makefile.am

EXTRA_DIST = \
	osm2pgsql/*.h \
	osm2pgsql/*.c \
	osm2pgsql/*.cpp \
	osm2pgsql/*.txt \
	osm2pgsql/Makefile \
	osm2pgsql/legacy/*.h \
	osm2pgsql/legacy/*.c \
	osm2pgsql/legacy/*.cpp \
	osm2pgsql/legacy/Makefile \
	osm2singleline_per_tag/*.pl \
	osm2shp/*.cpp \
	osm2shp/README \
	CityKML/README \
	CityKML/*.sh \
	CityKML/*.pl \
	CityKML/*.txt \
	osm2csv/*.pl \
	osmgarminmap/CHANGES \
	osmgarminmap/*.cpp \
	osmgarminmap/*.h \
	osmgarminmap/feature-list.csv \
	osmgarminmap/*.pl \
	osm2kml/osm2kml.py \
	osmgoogleearth/*.kmz \
	osmgoogleearth/*.xml \
	osmgoogleearth/*.xsl \
	osmgoogleearth/icons/*.png \
	osmgoogleearth/*.png \
	osmgoogleearth/README \
	osmgarminmap/README \
	osmgarminmap/*.xsl \
	osmgarminmap/*.xml \
	osmgarminmap/*.ods \
	osmgarminmap/CHANGES \
	osmgarminmap/Makefile.osm2garmin