# Makefile.am for scripts

SUBDIRS =      \
	osmtrackfilter

EXTRA_DIST = \
	csv2osm/*.pl \
	csv2osm/*.txt \
	csv2osm/*.sample \
	tiger_import/status \
	tiger_import/*.rb \
	tiger_import/tiger/*.rb \
	tiger_import/spider/*.rb \
	srtm2osm/*.diff \
	srtm2osm/*.sh \
	srtm2osm/README \
	dafif2osm/*.txt \
	dafif2osm/*.TXT \
	coast_import/Data/*.sh \
	coast_import/Data/*.txt \
	airport_import/README \
	airport_import/*.sql \
	airport_import/*.utf8

